--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,18 @@
 body {
 	background-color: lightgrey;
 }
-.form-control {
-	font-size: 24px;
-}
-.header {
-	margin-top: 50px;
-	margin-bottom: 50px;
+
+.header{
 	text-align: center;
+	font-family: sans-serif;
 }
 
-.row {
-	border: 1px solid white;
-
-}
 .info {
-	font-size: 24px;
+	border:1px solid white;
+	
+	background-color: lightblue;
+}
 
+.container {
+	background-color: lightblue;
 }
